@@ -1,3 +1,8 @@
+2000-11-06  John Harper  <jsh@eazel.com>
+
+	* group.jl, shell.jl: fixed some bugs introduced by the change
+	to refresh groups after slot commits
+
 2000-11-02  John Harper  <jsh@eazel.com>
 
 	* group.jl (fetch-group, select-group): added keyword parameter
